--- a/Impfungen.Rmd
+++ b/Impfungen.Rmd
@@ -25,10 +25,8 @@ Row
 ### **Impffortschritt in Deutschland** 
 
 Derzeit werden drei Impfstoffe zur Verhinderung einer COVID-19-Erkrankung eingesetzt ("Tozinameran" von Biontech/Pfizer, "mRNA-1273" von Moderna sowie "AZD1222" von AstraZeneca). Alle drei Impfstoffe setzen zwei verabreichte Impfdosen (mit unterschiedlichen Abständen) für einen vollständigen Impfschutz voraus.\
-Das RKI berichtet für Deutschland und die Bundesländer die Gesamtzahl der durchgeführten Impfungen sowie die Zahl der Erst- und Zweitimpfungen. Für die meisten Bundesländer sind auch Zahlen für bestimmte Indikationen verfügbar, z.B. Pflegeheimbewohnende oder ältere Bevölkerung (derzeit Über-80-Jährige).\
-In der untenstehenden Tabelle sind die entsprechenden Anteile in Prozent für die durchgeführten Impfungen relativ zur Größe der jeweiligen Bevölkerungsgruppe angegeben (Pflegeheimbewohnende Spalten "PHB", Über-80-Jährige Spalten "Alter", Gesamtbevölkerung Spalten "Gesamt"). Weiterhin berichten wir die Anzahl der insgesamt durchgeführten Impfungen (Erst- plus Zweitimpfungen), umgerechnet auf jeweils 100.000 Einwohnende.\
-
-*Das RKI hat die bereitgestellten Informationen zu den erfolgten Impfungen verändert. Wir arbeiten an der Überarbeitung der hier berichteten Kennzahlen.*
+Das RKI berichtet für Deutschland und die Bundesländer die Gesamtzahl der durchgeführten Impfungen sowie die Zahl der Erst- und Zweitimpfungen. Für einige Bundesländer sind auch Zahlen für die Altersgruppen der Über-60-Jährigen sowie Unter-60-Jährigen verfügbar.\
+In der untenstehenden Tabelle sind die entsprechenden Anteile in Prozent für die durchgeführten Impfungen relativ zur Größe der jeweiligen Bevölkerungsgruppe angegeben. Weiterhin berichten wir die Anzahl der insgesamt durchgeführten Impfungen (Erst- plus Zweitimpfungen), umgerechnet auf jeweils 100.000 Einwohnende.\
 
 Stand Impfdaten (RKI): `r format(as_date(max(rki_vacc$date, na.rm = TRUE))+1,format="%d.%m.%Y")`.
 
