update vorwarnzeit and small fixes

--- a/Impfungen.Rmd
+++ b/Impfungen.Rmd
@@ -24,7 +24,7 @@ Row
 
 ### **Impffortschritt in Deutschland** 
 
-Derzeit werden drei Impfstoffe zur Verhinderung einer COVID-19-Erkrankung eingesetzt ("Tozinameran" von Biontech/Pfizer, "mRNA-1273" von Moderna sowie "AZD1222" von AstraZeneca). Alle drei Impfstoffe setzen zwei verabreichte Impfdosen (mit unterschiedlichen Abständen) für einen vollständigen Impfschutz voraus.\
+Derzeit werden drei Impfstoffe zur Verhinderung einer COVID-19-Erkrankung eingesetzt ("Comirnaty" von Biontech/Pfizer, "mRNA-1273" von Moderna sowie "Vaxzevria" von AstraZeneca). Alle drei Impfstoffe setzen zwei verabreichte Impfdosen (mit unterschiedlichen Abständen) für einen vollständigen Impfschutz voraus.\
 Das RKI berichtet für Deutschland und die Bundesländer die Gesamtzahl der durchgeführten Impfungen sowie die Zahl der Erst- und Zweitimpfungen. Für einige Bundesländer sind auch Zahlen für die Altersgruppen der Über-60-Jährigen sowie Unter-60-Jährigen verfügbar.\
 In der untenstehenden Tabelle sind die entsprechenden Anteile in Prozent für die durchgeführten Impfungen relativ zur Größe der jeweiligen Bevölkerungsgruppe angegeben. Weiterhin berichten wir die Anzahl der insgesamt durchgeführten Impfungen (Erst- plus Zweitimpfungen), umgerechnet auf jeweils 100.000 Einwohnende.\
 
