--- a/Start.Rmd
+++ b/Start.Rmd
@@ -76,15 +76,15 @@ Row
 ### Inzidenzprojektionen 
 
 ```{r indicatorIncProj}
-indicatorIncProj <- bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<35 bei R(t) aktuell`)
+indicatorIncProj <- bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<100 bei R(t) aktuell`)
 if(indicatorIncProj=="nie") {
   indicatorIncProj <- "Inzidenz steigt!"
 }
 valueBox(value=indicatorIncProj,
-         caption=paste0("Datum, bei dem mit aktuellem R-Wert die Sieben-Tage-Inzidenz den Zielwert 35 unterschreitet. \n unter 50: ",
-                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<50 bei R(t) aktuell`),
-                        ",\n unter 10: ",
-                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<10 bei R(t) aktuell`)#,
+         caption=paste0("Datum, bei dem mit aktuellem R-Wert die Sieben-Tage-Inzidenz den Zielwert 100 unterschreitet. \n unter 165: ",
+                        bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<165 bei R(t) aktuell`)#,
+                        # ",\n unter 10: ",
+                        # bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<10 bei R(t) aktuell`)#,
                         # ",\n mit R=0,7, unter 50: ",
                         # bl_projektionen %>% filter(Bundesland=="Gesamt") %>% pull(`Inzidenz<50 bei R(t)=0,7`),
                         # ", unter 35: ",
