--- a/Impfungen.Rmd
+++ b/Impfungen.Rmd
@@ -24,8 +24,8 @@ Row
 
 ### **Impffortschritt in Deutschland** 
 
-Derzeit werden drei Impfstoffe zur Verhinderung einer COVID-19-Erkrankung eingesetzt ("Comirnaty" von Biontech/Pfizer, "mRNA-1273" von Moderna sowie "Vaxzevria" von AstraZeneca). Alle drei Impfstoffe setzen zwei verabreichte Impfdosen (mit unterschiedlichen Abständen) für einen vollständigen Impfschutz voraus.\
-Das RKI berichtet für Deutschland und die Bundesländer die Gesamtzahl der durchgeführten Impfungen sowie die Zahl der Erst- und Zweitimpfungen. Für einige Bundesländer sind auch Zahlen für die Altersgruppen der Über-60-Jährigen sowie Unter-60-Jährigen verfügbar.\
+Derzeit werden vier Impfstoffe zur Verhinderung einer COVID-19-Erkrankung eingesetzt ("Comirnaty" von Biontech/Pfizer, "mRNA-1273" von Moderna, "Vaxzevria" von AstraZeneca, sowie "COVID-19 Vaccine Janssen" von Johnson&Johnson). Drei der Impfstoffe setzen zwei verabreichte Impfdosen (mit unterschiedlichen Abständen) in einer Impfserie für einen vollständigen Impfschutz voraus (Biontech, AstraZeneca, Moderna), während mit Johnson&Johnson nur einmal geimpft wird.\
+Das RKI berichtet für Deutschland und die Bundesländer die Gesamtzahl der Impfungen sowie die Zahl der begonnenen Impfserien und die Zahl der vollständig geimpften Personen (1x geimpft für Johnson&Johnson, sonst 2x geimpft). Für einige Bundesländer sind auch Zahlen für die Altersgruppen der Über-60-Jährigen sowie Unter-60-Jährigen verfügbar. Für diese Altersgruppen kann nicht genau berechnet werden, wie viele Personen mindestens eine Impfung erhalten haben, da hier nicht nach Impfstoffherstelller differenziert wird. Die Spalten "Alter 60+ min. 1x" und "Alter <60 min. 1x" in untenstehender Tabelle enthalten deshalb keine Impfungen mit Johnson&Johnson und entsprechen nur den begonnenen Impfserien mit den anderen drei Impfstoffen. Die Spalten "Alter 60+ vollst." und "Alter <60 vollst." geben dafür den Anteil der jeweiligen Altersgruppe an, der vollständig mit einem der 4 Impfstoffe geimpft wurde. Die Spalte "Gesamt min. 1x" berücksichtigt auch Impfungen mit Johnson&Johnson.\
 In der untenstehenden Tabelle sind die entsprechenden Anteile in Prozent für die durchgeführten Impfungen relativ zur Größe der jeweiligen Bevölkerungsgruppe angegeben. Weiterhin berichten wir die Anzahl der insgesamt durchgeführten Impfungen (Erst- plus Zweitimpfungen), umgerechnet auf jeweils 100.000 Einwohnende.\
 
 Stand Impfdaten (RKI): `r format(as_date(max(rki_vacc$date, na.rm = TRUE))+1,format="%d.%m.%Y")`.
