--- a/Kreise.Rmd
+++ b/Kreise.Rmd
@@ -36,6 +36,8 @@ Row
 DT::datatable(kreise_table,
               extensions = 'Responsive',
               options = list(paging = TRUE,
+                             scrollY=1000,
+                             scrollCollapse=TRUE,
                              # columnDefs = list(list(className = 'dt-center', targets = 2:3)),
                              searching = TRUE,
                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
