--- a/Projektion.Rmd
+++ b/Projektion.Rmd
@@ -38,6 +38,8 @@ Row
 DT::datatable(bl_projektionen,
               extensions = 'Responsive',
               options = list(paging = FALSE,
+                             scrollY=1000,
+                             scrollCollapse=TRUE,
                              pageLength=20,
                              columnDefs = list(list(className = 'dt-center', targets = 3:11),
                                                list(orderData = 12, targets = 4),
@@ -79,6 +81,8 @@ Row
 DT::datatable(kreise_projektionen %>% select(-`AGS (num)`, -Vorwarnzeit_ROR),
               extensions = 'Responsive',
               options = list(paging = TRUE,
+                             scrollY=1000,
+                             scrollCollapse=TRUE,
                              columnDefs = list(list(className = 'dt-center', targets = c(3, 5:12)),
                                                list(orderData = 13, targets = 5),
                                                list(visible = FALSE, targets = 13),
