--- a/Start.Rmd
+++ b/Start.Rmd
@@ -38,7 +38,7 @@ library(tidyr)
 library(stringr)
 library(ggplot2)
 library(dtplyr)
-source("R/functions.R", encoding = "UTF-8")
+source("R/functions_newvwz.R", encoding = "UTF-8")
 # load("test.RData")
 ```
 
@@ -163,7 +163,7 @@ Row
 ***Inzidenzprojektion***: Wenn die Inzidenz sinkt (R-Wert < 1), kann berechnet werden, wann die Inzidenz ein gegebenes Niveau unterschreitet.\
 ***Reproduktionszahl R***: Anzahl der Personen, die eine infizierte Person durchschnittlich mit COVID-19 infiziert. Bei R<1 sinkt die Zahl der Neuinfektionen. Bei hoher Inzidenz sind auch Werte nahe 1 kritisch, da sich das Infektionsgeschehen nicht deutlich verlangsamt.\
 ***Neue Fälle je 100.000 Einwohnende in 7 Tagen***: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet. Wegen Meldeverzügen fehlen für einige Kreise/Bundesländer die Fallzahlen des Vortages. Fehlende Werte imputieren wir mit dem Mittelwert der vorhergehenden 6 Tage, um die 7-Tage-Inzidenz vergleichbar zu machen. \
-***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung der stationären Behandlungskapazitäten (Annahme: für zukünftige COVID-19-Fälle stehen die derzeit freien Betten sowie bereits mit COVID-19-Fällen belegte Betten zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Wir berücksichtigen die aktuelle Altersstruktur der Infizierten und unterschiedliche Raten der Intensivfälle: `r round((itsquoten %>% filter(periode==6) %>% pull("bis 60"))*100, 2)`% für Unter-60-Jährige, `r round((itsquoten %>% filter(periode==6) %>% pull("60-80"))*100, 2)`% für 60-bis-79-Jährige, sowie `r round((itsquoten %>% filter(periode==6) %>% pull("ueber 80"))*100, 2)`% für Über-80-Jährige. Diese Quoten wurden auf Basis der im Intensivregister gemeldeten Fälle mit Korrektur für Doppelzählungen auf Grund von Verlegungen (27%) sowie Versorgungsdaten des BARMER Instituts für Gesundheitssystemforschung bestimmt. Die "effektive Vorwarnzeit" ist die Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken. Vgl. Methodenpapier.
+***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung der stationären Behandlungskapazitäten (Annahme: für zukünftige COVID-19-Fälle stehen die derzeit freien Betten sowie bereits mit COVID-19-Fällen belegte Betten zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Wir berücksichtigen die aktuelle Altersstruktur der Infizierten und unterschiedliche Raten der Intensivfälle: `r round((itsquoten %>% filter(periode==6) %>% pull("bis 60"))*100, 2)`% für Unter-60-Jährige, `r round((itsquoten %>% filter(periode==6) %>% pull("60-80"))*100, 2)`% für 60-bis-79-Jährige, sowie `r round((itsquoten %>% filter(periode==6) %>% pull("ueber 80"))*100, 2)`% für Über-80-Jährige. Diese Quoten wurden auf Basis der im Intensivregister gemeldeten Fälle mit Korrektur für Doppelzählungen auf Grund von Verlegungen (27%) sowie Versorgungsdaten des BARMER Instituts für Gesundheitssystemforschung bestimmt. Ebenso wurde für Geimpfte ein um 90% reduziertes Risiko einer ITS-Behandlung angenommen. Die "effektive Vorwarnzeit" ist die Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken. Vgl. Methodenpapier.
 
 Row
 ------------------------------------------------------------------------
