--- a/Report.Rmd
+++ b/Report.Rmd
@@ -28,4 +28,4 @@ Jeden Mittwoch veröffentlicht die Kassenärztliche Bundesvereinigung (KBV) geme
 
 [Den aktuellen Corona-Report finden Sie hier](https://www.kbv.de/html/corona-report.php).
 
-Zum besseren Verständnis des Reports finden Sie eine kommentierte Lesehilfe [hier](https://www.zidatasciencelab.de/covid19dashboard/static/coronareport_lesehilfe.pdf).
+Zum besseren Verständnis des Reports finden Sie eine kommentierte Lesehilfe [hier](https://www.kbv.de/media/sp/2021-10-01_Corona_Report_kommentiert.pdf).
